--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     font-size: 40px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
-
+    src: url(Imagenes/PokemonHollow.ttf);
+font-style: url(https://fontmeme.com/permalink/200206/4508b9ec5600dc2e39bdb488d8f6c7f5.png);
 }
 
