--- a/css/style.css
+++ b/css/style.css
@@ -17,3 +17,7 @@ body{
 font-style: url(https://fontmeme.com/permalink/200206/4508b9ec5600dc2e39bdb488d8f6c7f5.png);
 }
 
+
+nav{
+    background-color: red;
+}
