--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,20 @@
 body{
-
     background: url(../img/Pokedex_Background.png);
-    
-
 }
 .nav-link{
-    color: white;
+    color: yellow !important;
 }
-
 .SubTitle{
-
     font-size: 40px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     src: url(Imagenes/PokemonHollow.ttf);
 font-style: url(https://fontmeme.com/permalink/200206/4508b9ec5600dc2e39bdb488d8f6c7f5.png);
 }
-
-
-nav{
-    background-color: red;
+.bg-light{
+    background-color: red !important;
+}
+.btnBackground{
+   border: 1px solid yellow;
+   color: yellow;
 }
