--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,38 @@
-body{
+body {
     background: url(../img/Pokedex_Background.png);
 }
-.nav-link{
+
+.nav-link {
     color: yellow !important;
 }
-.SubTitle{
+
+.SubTitle {
     font-size: 40px;
     text-align: center;
     font-family: 'Press Start 2P', cursive;
     src: url(Imagenes/PokemonHollow.ttf);
-font-style: url(https://fontmeme.com/permalink/200206/4508b9ec5600dc2e39bdb488d8f6c7f5.png);
+    font-style: url(https://fontmeme.com/permalink/200206/4508b9ec5600dc2e39bdb488d8f6c7f5.png);
 }
-.bg-light{
+
+.bg-light {
     background-color: red !important;
 }
-.btnBackground{
-   border: 1px solid yellow;
-   color: yellow;
+
+.btnBackground {
+    border: 1px solid yellow;
+    color: yellow;
+}
+
+.contenedor {
+    padding: 40px;
+    width: 100%;
+}
+
+.PokemonContenedor {
+    float: left;
+    margin-top: 20px;
+    margin-left: 20px;
+    padding: 40px;
+    background-color: white;
+    text-align: center;
 }
