--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
     background: url(../img/Pokedex_Background.png);
+    background-attachment: fixed;
 }
 
 .nav-link {
@@ -17,6 +18,7 @@ body {
 .bg-light {
     background-color: red !important;
 }
+
 
 .btnBackground {
     border: 1px solid yellow;
@@ -36,3 +38,5 @@ body {
     background-color: white;
     text-align: center;
 }
+
+
